closes #406 [Bug] Main landing page css overflow bug.

--- a/themes/quasar/source/css/index.styl
+++ b/themes/quasar/source/css/index.styl
@@ -205,7 +205,7 @@ figure
 .q-feature-item
   float left
   width 50%
-  height 325px
+  height 400px
   box-sizing border-box
   padding 0 50px
   color #888
